**refactor: renomear entidades e atualizar endpoints da API para consistência**
Renomeado 'Usuario' para 'Utilizador' e 'Cidadao' para 'Utente' em todos os serviços para melhor consistência na nomenclatura. Atualizadas as classes de repositório, serviço e controlador correspondentes. Modificadas as chamadas de API no frontend para refletir os novos endpoints. Adicionada configuração de CORS e atualizadas as configurações de ambiente.

**Principais alterações:**

* Renomeação das entidades principais e classes relacionadas
* Atualização dos endpoints da API e integração com o frontend
* Adição de configuração CORS abrangente
* Correção de inconsistências na nomeação de variáveis no frontend
* Atualização de variáveis de ambiente e configurações de build